Correct missing test to check for empty feature refs in java SDK.